Colaboratory를 통해 생성됨

--- a/5_3.ipynb
+++ b/5_3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNvYU8p2kWj7VWssMUIhLb7",
+      "authorship_tag": "ABX9TyNWT9VOlzQLSLaTp3DuCrSs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -224,6 +224,13 @@
       ],
       "metadata": {
         "id": "MYdLmUXHN4Se"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "GmNF9Ob7YtBA"
       }
     },
     {
@@ -506,6 +513,41 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#실습5"
+      ],
+      "metadata": {
+        "id": "2gPiuGyVYxrZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "WINE 데이터 세트를 이용하여\n",
+        "\n",
+        "* 결정 트리\n",
+        "* 랜덤포레스트\n",
+        "* 엑스트라 트리\n",
+        "* 그래디언트 부스팅\n",
+        "* 히스토그램 기반 그래디언트 부스팅\n",
+        "\n",
+        "모델을 만들고 최적화"
+      ],
+      "metadata": {
+        "id": "TlpmcTa0Y1BJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "2bTIM0lLYzZL"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
