Colaboratory를 통해 생성됨

--- a/7_1.ipynb
+++ b/7_1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVKafSPup5Cv88D7DUunHe",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyP0uf/9LRKh02T/Qi2pGH+a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -54,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "v2RTobm6bpW0"
       },
@@ -75,10 +77,29 @@
         "(train_input, train_target), (test_input, test_target) = keras.datasets.fashion_mnist.load_data()"
       ],
       "metadata": {
-        "id": "1OEkZKnhcWsw"
+        "id": "1OEkZKnhcWsw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "c0fd6156-8f7b-4874-c2f1-4bfd1b9f1835"
       },
-      "execution_count": 13,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
+            "29515/29515 [==============================] - 0s 1us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
+            "26421880/26421880 [==============================] - 2s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
+            "5148/5148 [==============================] - 0s 0us/step\n",
+            "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
+            "4422102/4422102 [==============================] - 1s 0us/step\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -90,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TSCOntUvcZvK",
-        "outputId": "2427e16f-fe32-4251-9f03-4f53144b1e82"
+        "outputId": "0149b87b-e65a-4916-94be-8c33542efcbd"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,9 +134,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RMvTUHBWcf3K",
-        "outputId": "eb92e5d6-2d84-43a9-fea6-945326adb0d9"
+        "outputId": "b58996ea-3546-4ac5-e521-29bb2436499f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,12 +161,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 94
+          "height": 95
         },
         "id": "BSaI_IbycmXp",
-        "outputId": "c9839cc9-b820-46cf-908f-f101a2f53dd9"
+        "outputId": "7ed0a2ac-4ce2-407e-9fc7-b6a1bf5592ce"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -170,9 +191,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KUofL4MKc-mA",
-        "outputId": "f485b19d-8e85-4dd8-aeb6-9bc61ebb148c"
+        "outputId": "879e88a7-6cd9-4f25-a309-4abac3e9bde5"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,9 +216,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vaEIrrSrhI2Y",
-        "outputId": "a9a4427a-63d7-4c4b-c5d9-d95a003cc85c"
+        "outputId": "fc7e8df8-632a-4c7d-b84b-8acc7f205475"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -255,7 +276,7 @@
       "metadata": {
         "id": "wjB0SprqeA5r"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,9 +289,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XS23hFXUfzrp",
-        "outputId": "850b3353-a047-4fdd-e29a-893def85d169"
+        "outputId": "9d751dc8-8cd2-4c0c-a1c4-b7cc537c3ee1"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -299,9 +320,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XuQQFGi1gHhY",
-        "outputId": "0d0f7b88-28cf-43c3-a21a-b285c398cf04"
+        "outputId": "3b84e878-ab74-4122-de91-ea6476487467"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,9 +349,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ThaOsuSRf1FK",
-        "outputId": "a333766f-e63d-4b94-83f7-0bd68c0da474"
+        "outputId": "0d781d24-a395-4bd9-8829-0df37c2db41a"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -359,7 +380,7 @@
       "metadata": {
         "id": "V63P5TKgiOky"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -388,7 +409,7 @@
       "metadata": {
         "id": "GeWic2NDmXvL"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -401,15 +422,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XxexdsaGnq9a",
-        "outputId": "bcd0f124-dca4-483e-ef57-8fe5809c0893"
+        "outputId": "60e3d3c0-846a-4d90-94ae-46d152efbc79"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "(48000, 784) (12000,)\n"
+            "(48000, 784) (48000,)\n"
           ]
         }
       ]
@@ -424,9 +445,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u477KtOInuZc",
-        "outputId": "d39c5895-a491-470b-c23c-d6ed4142c570"
+        "outputId": "c922c596-961d-46ea-cff0-e7220cca0e5d"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -440,23 +461,25 @@
     {
       "cell_type": "code",
       "source": [
+        "#층 생성\n",
         "dense = keras.layers.Dense(10, activation='softmax', input_shape=(784,))"
       ],
       "metadata": {
         "id": "eSyTtrIXnyNI"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "#모델 생성\n",
         "model = keras.Sequential(dense)"
       ],
       "metadata": {
         "id": "IkhPAkMCoHg6"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -477,7 +500,7 @@
       "metadata": {
         "id": "ar1zD4choKny"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -499,9 +522,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zgh_HWQeoWvF",
-        "outputId": "bd2d3010-2a6b-4a95-f966-d887367fb72d"
+        "outputId": "dce9ab37-02c2-4d61-b48b-bfe501c9310c"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -522,37 +545,48 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "MKVBoNnZoZFw",
-        "outputId": "6ce3893b-c467-42f2-b66e-0b373b12b524"
+        "outputId": "a03bead1-0f03-419e-b11d-b2ed8e5dd73b"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "1500/1500 [==============================] - 9s 5ms/step - loss: 0.6069 - accuracy: 0.7947\n",
+            "1500/1500 [==============================] - 9s 3ms/step - loss: 0.6069 - accuracy: 0.7947\n",
             "Epoch 2/5\n",
-            "1500/1500 [==============================] - 6s 4ms/step - loss: 0.4742 - accuracy: 0.8382\n",
+            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.4742 - accuracy: 0.8382\n",
             "Epoch 3/5\n",
-            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.4508 - accuracy: 0.8474\n",
+            "1500/1500 [==============================] - 5s 3ms/step - loss: 0.4508 - accuracy: 0.8474\n",
             "Epoch 4/5\n",
-            "1500/1500 [==============================] - 4s 2ms/step - loss: 0.4367 - accuracy: 0.8527\n",
+            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.4367 - accuracy: 0.8527\n",
             "Epoch 5/5\n",
-            "1500/1500 [==============================] - 3s 2ms/step - loss: 0.4280 - accuracy: 0.8555\n"
+            "1500/1500 [==============================] - 4s 3ms/step - loss: 0.4280 - accuracy: 0.8555\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.History at 0x7b50e5b3b130>"
+              "<keras.src.callbacks.History at 0x7fef4b532e30>"
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 20
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "에포크는 훈련 횟수이고 밑에 있는 1500은 미니배치의 수\n",
+        "\n",
+        " 48000개의 샘플을 32개씩 나누어서 총 1500번 훈련을 수행"
+      ],
+      "metadata": {
+        "id": "ehN3fjSSFjuu"
+      }
     },
     {
       "cell_type": "code",
@@ -565,9 +599,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VG9DPXbxpZKG",
-        "outputId": "a2fb86d5-1181-40ce-8807-8691e2290fc5"
+        "outputId": "c3258eb8-2707-40e9-a086-510aef77852e"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,11 +614,11 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[0.45262545347213745, 0.8464999794960022]"
+              "[0.45262548327445984, 0.8464999794960022]"
             ]
           },
           "metadata": {},
-          "execution_count": 35
+          "execution_count": 21
         }
       ]
     }
